--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@
 
 DATABASE_URL="postgresql://root:root@localhost:5433/retaurant?schema=public"
 SECRET_KEY=eDIVT8YWC1s3G7FLZE6MMXGlFwA7iUtr
+REFE_KEY= eDIVT8YWC1s3G7FLZE6MMXGlFwA7long
+ACCESS_TOKEN_TIME = 3h
+REFRESH_TOKEN_TIME= 1d
