--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.4.2",
     "@types/cookie": "^0.5.2",
     "@types/express": "^4.17.18",
     "argon2": "^0.31.1",
+    "bcrypt": "^5.1.1",
+    "brcypt": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie": "^0.5.0",
