chore(add): CRUD user

--- a/.env
+++ b/.env
@@ -5,7 +5,14 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://root:root@localhost:5433/retaurant?schema=public"
+
 SECRET_KEY=eDIVT8YWC1s3G7FLZE6MMXGlFwA7iUtr
 REFE_KEY= eDIVT8YWC1s3G7FLZE6MMXGlFwA7long
+
 ACCESS_TOKEN_TIME = 3h
 REFRESH_TOKEN_TIME= 1d
+
+AWS_REGION=ap-southeast-1
+AWS_ACCESS_KEY_ID=AKIA2QL2RNXRORB5DO7L
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET_NAME='retaurant'
