--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.4.2",
+    "@types/aws-sdk": "^2.7.0",
     "@types/cookie": "^0.5.2",
     "@types/express": "^4.17.18",
     "argon2": "^0.31.1",
+    "aws-sdk": "^2.1472.0",
     "bcrypt": "^5.1.1",
     "brcypt": "^1.0.1",
     "class-transformer": "^0.5.1",
