--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "@nestjs/testing": "^10.0.0",
     "@types/cookie-parser": "^1.4.4",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
