--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
-version: "3.8"
+version: '3.8'
 services:
   dev-database:
     image: postgres:15.0
     container_name: dev-database
     ports:
-      - "5433:5432"
+      - '5433:5432'
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
